src/main/resources/static/css/style.css
/* ... */
pre > code {
    /* A scroll bar will show if a line is too long */
    white-space: pre;
}

.scrollable > .content,
.listingblock .content {
    padding-bottom: unset;
}
/* </editor-fold> */

/* <editor-fold desc="common"> */

/* asciidoctor.css was added on Thu May 2 2024
table {
    border-spacing: 0;
    width: 100%;
    margin-bottom: 25px;
}

td,
th {
    border-bottom: 1px solid #e1e1e1;
    padding: 12px 15px;
    text-align: left;
}

td:first-child,
th:first-child {
    padding-left: 0;
}

td:last-child,
th:last-child {
    padding-right: 0;
}

td p {
    margin: 0;
}

hr {
    border: 0;
    border-top: 1px solid #f4f5f6;
    margin: 30px 0;
}

label,
legend {
    display: block;
    font-weight: 700;
    margin-bottom: 5px;
}

li p, ul dd, ol dd {
    margin-top: 0;
    margin-bottom: .625rem;
}*/

body {
    -webkit-overflow-scrolling: touch;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

h1, h2, h3, h4, h5, h6 {
    color: black;
    cursor: text;
    font-weight: 700;
}

a {
    color: #086dc3;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

/* 阻止手机浏览器修改搜索框样式 */
input[type=search] {
    -moz-appearance: none; /* older firefox */
    -webkit-appearance: none; /* safari, chrome, edge and ie mobile */
    /*noinspection CssUnknownProperty*/
    appearance: none; /* rest */
}

input[type='email'],
input[type='number'],
input[type='password'],
input[type='search'],
input[type='tel'],
input[type='text'] {
    background-color: transparent;
    border: 1px solid #d1d1d1;
    box-shadow: none;
    border-radius: .4rem;
    font-size: 1rem;
    padding: .6rem 1rem;
    box-sizing: border-box;
    width: 100%;
}

input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
}

input:focus {
    border: 1px solid #086dc3;
    outline: 0;
}

.button,
button,
input[type='button'],
input[type='reset'],
input[type='submit'] {
    background-color: #086dc3;
    border: 0.1rem solid #086dc3;
    border-radius: .4rem;
    color: #fff;
    cursor: pointer;
    display: inline-block;
    font-weight: 700;
    height: 3rem;
    letter-spacing: .1rem;
    padding: 0 2rem;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    white-space: nowrap;
}

.btn:hover {
    background-color: rgba(60, 64, 67, 0.08);
    border-radius: 50%;
}

.mobi .btn:hover {
    background-color: transparent;
}

img {
    max-width: 100%;
}

.no_selection {
    -webkit-user-select: none;
    -moz-user-select: none;
    /*noinspection CssUnknownProperty*/
    -khtml-user-select: none;
    -ms-user-select: none;
}

.stemblock {
    margin-bottom: 0;
}

mjx-container[jax="SVG"][display="true"] {
    margin: 0 !important;
}

pre {
    background-color: #f7f7f8;
}

.show {
    display: block !important;
}

.scrollable, .stemblock {
    overflow-x: auto;
}

/* </editor-fold> */

/* <editor-fold desc="布局"> */
.container {
    max-width: 800px;
    min-width: 320px;
    margin: 0 auto;
    padding: .25rem var(--container-left-right-padding) 5rem;
}

.row {
    display: flex;
    flex-direction: column;
}

.row .column {
    display: block;
    flex: 1 1 auto;
    max-width: 100%;
    width: 100%;
}

.main {
    border-radius: 0;
    box-shadow: none;
    padding: 1rem 0;
}

.sitemap {
    padding: 0 0 2rem;
}

.content {
    font-size: 1rem;
    box-sizing: border-box;
    padding-bottom: 1rem;
}

.page .search_str {
    font-style: normal;
    background-color: #ff9;
}

.content .heading a.anchor {
    color: rgba(0, 0, 0, .2);
    font-weight: normal;
    text-decoration: none;
}

.content .heading a.anchor:before {
    content: '#';
}

.desktop .content .heading a.anchor {
    box-sizing: border-box;
    display: inline-block;
    margin-left: -21px;
    padding-right: 5px;
    width: 21px;
    text-align: right;
    visibility: hidden;
}

.desktop .content .heading:hover a.anchor {
    visibility: visible;
}

.desktop .content .heading a.anchor:hover {
    color: #097dff;
}

.mobi .content .heading a.anchor {
    margin-left: 10px;
    opacity: .5;
}

/* </editor-fold> */

/* <editor-fold desc="Footer"> */
html, body {
    height: 100%;
}

.container {
    position: relative;
    min-height: 100%;
}

.footer {
    position: absolute;
    left: 0;
    bottom: 3rem;
    width: 100%;
    padding: 0 var(--container-left-right-padding);
}

.footer hr {
    margin: 0;
}

.footer .copyright {
    padding-top: .5rem;
    text-align: center;
}
/* </editor-fold> */

/* <editor-fold desc="Header"> */
.header__toolbar {
    box-sizing: border-box;
}

.row .column.sidebar {
    display: none;
}

.show_sidebar .column.sidebar {
    display: block;
}

.header_menu_row h1.site_title {
    margin: 0;
    padding: 0;
}

.header_menu_row .site_title a:hover {
    text-decoration: none;
}

.header_menu_row table {
    width: 100%;
    background: unset;
    margin: 0;
    border: none;
}

.header_menu_row table td {
    padding: 0;
}

.header_menu_row table .left {

}

.header_menu_row table .right {
    text-align: right;
}

.header_nav__search_box {
    box-sizing: border-box;
    padding-top: .2rem;
}

.header_nav__search_box .search_icon {
    background: url('data:image/svg+xml;utf8,<svg class="search_icon" focusable="false" height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>') no-repeat center;
    width: 38px;
    height: 38px;
    position: absolute;
    margin: .4rem 0 0 7px;
    opacity: .54;
    cursor: pointer;
}

.header_nav__search_form {
    position: relative;
}
/* ... */

